--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "gitalk": "^1.3.3",
     "html-webpack-plugin": "2.29.0",
     "http-proxy": "^1.17.0",
     "jest": "20.0.4",
