--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "jquery": "^3.3.1",
     "md5": "^2.2.1",
     "mobx": "^5.0.3",
-    "mobx-react": "^5.2.3",
+    "mobx-react": "^5.2.5",
     "nodemon": "^1.18.3",
     "object-assign": "4.1.1",
     "path": "^0.12.7",
@@ -56,6 +56,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-markdown": "^3.4.1",
+    "react-pdf": "^3.0.5",
     "react-router-dom": "^4.3.1",
     "request": "^2.87.0",
     "resolve": "1.6.0",
@@ -127,6 +128,8 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "babel-preset-stage-2": "^6.24.1",
     "react-snapshot": "^1.3.0"
   }
 }
