--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-history-api-fallback": "^1.5.0",
     "connect-redis": "^3.3.3",
     "cookie-parser": "^1.4.3",
+    "cpy": "^7.0.1",
     "cross-env": "^5.2.0",
     "crypto": "^1.0.1",
     "css-loader": "0.28.7",
@@ -38,6 +39,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "gitalk": "^1.3.3",
+    "globby": "^8.0.1",
     "html-webpack-plugin": "2.29.0",
     "http-proxy": "^1.17.0",
     "jest": "20.0.4",
