--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
     "babel-preset-stage-2": "^6.24.1",
-    "react-snapshot": "^1.3.0"
+    "react-snapshot": "^1.3.0",
+    "webpack-bundle-analyzer": "^2.13.1"
   }
 }
