--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "start-api": "cross-env NODE_ENV=production node ./server/api/index.js",
     "start-dev-api": "nodemon --watch server/api server/api/index.js",
     "start-pro": "concurrently \"npm run start-client\"  \"npm run start-api\"",
-    "build": "node scripts/build.js && react-snapshot",
+    "build": "node scripts/build.js",
+    "build:ssr": "react-snapshot",
     "test": "node scripts/test.js --env=jsdom"
   },
   "homepage": "/",
@@ -134,5 +135,10 @@
     "babel-preset-stage-2": "^6.24.1",
     "react-snapshot": "^1.3.0",
     "webpack-bundle-analyzer": "^2.13.1"
+  },
+  "reactSnapshot": {
+    "include": [],
+    "exclude": [],
+    "snapshotDelay": 300
   }
 }
